# devops-rs

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  github_output  test.ps1  test.sh
.devcontainer/: devcontainer.json
.github/actions/cache-key-build/: action.yml
.github/actions/cache-key-tools/: action.yml
.github/actions/release-tools/: action.yml
.github/actions/version-tools/: action.yml
.github/workflows/: ci.yml  docker.yml  experimental.yml  release.yml  tagging.yml  version_bump.yml
artifact/: hello_world  hello_world2
crates/hello_world/: Cargo.toml
crates/hello_world/src/: cli.rs  main.rs  server.rs
scripts/: bump_version.ts  ci.ts  deno.json  post_create_command.ts  release.ts
scripts/release/: 01_bump_version.ts  02_create_pr.ts  03_create_tag.ts  04_create_release_notes.ts  04_prepare_release_files.ts  05_create_release_notes.ts  deno.json  install_tools.ts
