[package]
name = "hello_world"
description = "A simple hello world crate for demonstration purposes."
publish.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "hello_world"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true

[features]
default = []
