[package]
name = "hello_world"
description = "A simple hello world crate for demonstration purposes."
publish.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "hello_world"
path = "src/hello_world.rs"
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.6", features = ["timeout", "trace"] }

[features]
default = []
